--- a/scss/base/_global.scss
+++ b/scss/base/_global.scss
@@ -11,7 +11,9 @@ img {
 
 body {
     background-color: lightgrey;
-    font-family: 'Baloo Tammudu 2', cursive;
+    // font-family: 'Baloo Tammudu 2', cursive;
+    // font-family: 'David Libre', serif;
+    color: rgb(36, 15, 75);
     
    
 }
@@ -21,4 +23,6 @@ body {
     margin: 1em auto;
     text-align: center;
 }
+
+
 
