--- a/scss/modules/_main-text.scss
+++ b/scss/modules/_main-text.scss
@@ -1,11 +1,11 @@
 .header{
     
-    color: black;
+    color: rgb(36, 15, 75);
     font-size: 4rem;
     margin-top: 0px;
     padding-top: 30px;
-    font-family: 'Playfair Display', serif;
-    font-weight: 500;
+    font-family: 'Pacifico', cursive; 
+    // font-weight: 700;
     
 
 }
@@ -32,7 +32,7 @@
 #winningText {
     
     font-weight: bold;
-    font-size:50px; 
+    font-size: 50px; 
     text-align: center; 
 
 }
@@ -64,10 +64,14 @@
     }
 }
 
-.btn-modal {
-    display: inline-block;
-    justify-content: center;
-    align-self: center;
-    line-height: 1rem;
+
+
+footer {
+    margin-top: 4em;
+    font-size: .6rem;
+     
+    a{
+        color: black;
+    }
 }
 
